# lingo.dev

./: .syncpackrc.json  CLAUDE.md  CONTRIBUTING.md  action.yml  i18n.json  package.json  pnpm-lock.yaml  turbo.json
.changeset/: add-iso-639-3-validation.md  add-shift-read.md  add-video-translator-community.md  all-candies-reply.md  allow-valid-locale-codes.md  beige-eels-hunt.md  bold-bushes-relax.md  bright-lions-suffer.md  bright-timers-hear.md  cold-jobs-dress.md  common-teeth-reply.md  comprehensive-readme-update.md  crisp-signs-itch.md  cute-icons-write.md  docs-locale-api.md  empty-dryers-happen.md  empty-release.md  eng-283-gemini-json-parse.md  exit-code-on-errors.md  fair-cows-pay.md  fancy-baboons-drum.md  fast-badgers-thank.md  fast-schools-smile.md  fiery-dingos-smell.md  fix-ci-rebase-abort-crash.md  fix-emails-posthog.md  fix-po-loader-crash.md  fix-prettier-formatter-loaders.md  fix-srt-undefined.md  fix-tracking-event-pairs.md  flat-beans-wonder.md  frank-rockets-carry.md  fruity-trees-rhyme.md  fuzzy-ears-work.md  fuzzy-ways-approve.md  gentle-gifts-tell.md  gentle-taxis-sit.md  goofy-pears-poke.md  grumpy-windows-beam.md  heavy-ants-boil.md  (+80 more)
.github/: pull_request_template.md
cmp/: .editorconfig  .gitignore  .npmrc  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
community/: README.md
community/lingo-docs/: .env.example  .gitignore  README.md  pyproject.toml
community/lingo-docs/example/: SAMPLE.md
community/lingo-docs/lingo_docs/: __init__.py  cli.py
docs/: svelte-integration-guide.md  (+1 more)
(+408 files in other folders)
