[project]
name = "lingo-docs"
version = "0.1.0"
description = "Translate markdown documentation to multiple languages using Lingo.dev"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lingodotdev~=1.0.0",
    "typer~=0.21.0",
    "rich~=13.9.0",
    "python-dotenv~=1.2.0",
]

[project.scripts]
lingo-docs = "lingo_docs.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
